--- a/Lab15-4.html
+++ b/Lab15-4.html
@@ -1,4 +1,8 @@
+<!DOCTYPE html>
 <html>
+    <head>
+        <meta charset="UTF-8">
+    </head>   
 <body>
 <script src="lab15-4.js"></script>
 </body>
