--- a/Lab15-6.html
+++ b/Lab15-6.html
@@ -3,6 +3,6 @@
         <meta charset="UTF-8">
     </head>   
 <body>
-<script src="lab15-2.js"></script>
+<script src="Lab15-6.js"></script>
 </body>
 </html>
